public/main.css
:root {
    --light-color: #faf0e6;
    --medium-color: #f6e3d0;
    --dark-color: rgba(86, 51, 16, 0.6);
    --darker-color: rgba(86, 51, 16, 0.8);
    --bottom-color: rgba(129, 77, 24, 0.2);
}

html,
body {
    margin: 0;
    width: 100%;
    height: 100%;
}

body {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #96f0aa;
    font-family: Lato, HelveticaNeue, "Helvetica Neue", Helvetica, Arial,
        sans-serif;
}

header {
    width: 80%;
    text-align: center;
}

main {
    width: min(80%, 950px);
    height: 100%;
    display: flex;
    flex-direction: column;
    overflow: hidden;
}

.description {
    font-size: 2rem;
}

#file-container {
    --radius: 10px;
    --header-height: 44px;
    width: 100%;
    flex-grow: 1;
    background-color: var(--light-color);
    border-radius: var(--radius);
    z-index: 0;
    position: relative;
    isolation: isolate;
    overflow-x: hidden;
    overflow-y: auto;
    scroll-behavior: smooth;
    margin-bottom: 2rem;
}

#file-container::before {
    content: "File List";
    font-size: 2rem;
    text-align: center;
    width: 100%;
    height: var(--header-height);
    background: linear-gradient(var(--light-color), var(--medium-color));
    border-bottom: 1px solid var(--bottom-color);
    border-radius: var(--radius) var(--radius) 0px 0px;
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 2;
    position: sticky;
    top: 0;
}

#file-container[data-files="0"]::after,
#file-container[data-hover="true"]::after {
    content: "Add or Drop Files Here";
    color: var(--dark-color);
    font-size: 4rem;
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;
    inset: var(--header-height) 0 0 0;
    z-index: -1;
}

#file-container[data-hover="true"]::after {
    content: "Drop Files Here";
    background: #fff2e080;
    border: 8px dashed #c8b6ac;
    color: #c8b6ac;
    font-size: 370%;
}

#file-container > #file-extra {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0px;
}

#file-container > #file-extra > #file_copy {
    display: none;
}

#file-container[data-files="0"] > #file-extra > #file_copy {
    display: flex;
    color: var(--dark-color);
    font-size: 5rem;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, calc(-50% - 3rem));
    z-index: -1;
}

#file-container[data-hover="true"] > #file-extra > #file_copy {
    display: none;
}

#file-container > #file-extra > #file_add {
    color: var(--darker-color);
    font-size: 3rem;
    font-weight: bold;
    margin-right: 5px;
    z-index: 2;
    position: sticky;
    top: calc(var(--header-height) / 2);
    transform: translateY(-50%);
    left: 100%;
    cursor: pointer;
}

#file-container[data-hover="true"] > #file-extra > #file_add {
    display: none;
}

#file-container > .file {
    --duration: 300ms;
    width: 100%;
    height: 50px;
    z-index: 0;
    position: relative;
    display: flex;
    flex-direction: row;
    align-items: center;
    background-color: var(--light-color);
    border-bottom: 1px solid var(--bottom-color);
}

#file-container[data-files="0"] > .file,
#file-container[data-hover="true"] > .file {
    display: none;
}

.no-select {
    -webkit-user-select: none; /* Safari */
    -ms-user-select: none; /* IE 10 and IE 11 */
    user-select: none; /* Standard syntax */
}

#file-container > .file > .reorder,
#file-container > .file > .remove {
    width: 38px;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-size: 3rem;
}

#file-container > .file > .reorder {
    content: "\e5d2";
    font-family: "Material Symbols Outlined";
    color: var(--dark-color);
    background: var(--medium-color);
    margin-right: 10px;
    cursor: move;
}

#file-container > .file > .remove {
    content: "\e5cd";
    font-family: "Material Symbols Outlined";
    color: #d7c7b7;
    font-weight: bold;
    cursor: pointer;
}

#file-container > .file > .remove:hover {
    color: var(--dark-color);
}

#file-container > .file > .name {
    display: flex;
    flex-direction: row;
    flex-grow: 1;
}

#file-container > .file[data-hold="true"] {
    border: 2px solid var(--dark-color);
    border-right-width: 0px;
    border-left-width: 0px;
    z-index: 1;
}

#file-container > .file[data-hold="true"] > .reorder {
    color: #d7c7b7;
    background: var(--dark-color);
}

#file-container > .file[data-hold="true"] > .remove {
    border-right: 2px solid var(--dark-color);
}

@keyframes removing {
    from {
        left: 0%;
    }
    to {
        left: 100%;
    }
}

#file-container > .file.removing {
    pointer-events: none;
    animation: removing var(--duration);
}

#file-form {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    margin-bottom: 5%;
}

#output-container {
    display: flex;
    flex-direction: row;
    gap: 1rem;
    align-items: center;
    margin-bottom: 1rem;
}

#output-container > label {
    margin-bottom: 0;
    margin-left: 10px;
    font-size: 1.7rem;
}

#output-name {
    border-radius: 5px;
    margin-bottom: 0;
}

.primary-btn {
    color: #fff;
    font-size: 1.5rem;
    line-height: 2rem;
    text-align: center;
    text-decoration: none;
    text-transform: uppercase;
    background-color: #4e9af1;
    border: 0.16em solid rgba(255, 255, 255, 0);
    border-radius: 5px;
    cursor: pointer;
    user-select: none;
    margin-bottom: 0;
}

.primary-btn:hover,
.primary-btn:focus {
    color: #fff;
    border-color: rgba(255, 255, 255, 1);
}

#merge-button {
    width: 20%;
    align-self: center;
}

.xpp_modal-container > .background {
    opacity: 0.7;
    background-color: #000;
    z-index: 10;
    position: fixed;
    inset: 0;
    animation: back-fadeIn 0.3s;
}

@keyframes back-fadeIn {
    0% {
        opacity: 0;
    }
    30% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

.xpp_modal-container > .xpp_modal {
    width: min(40%, 500px);
    background-color: var(--light-color);
    border-radius: 10px;
    padding: 1.25rem;
    max-height: 85vh;
    overflow: hidden;
    display: flex;
    flex-direction: column;
    z-index: 10;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    box-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
}

.xpp_modal > .header {
    display: flex;
    flex-direction: column;
    justify-content: center;
    font-size: 1.75rem;
}

.xpp_modal > .header > .title {
    text-align: center;
    font-size: 2.5rem;
    font-weight: normal;
    margin-bottom: 0.25rem;
}

.xpp_modal > .header > #modal_close {
    content: "\e5cd";
    font-family: "Material Symbols Outlined";
    font-size: 3.1rem;
    font-weight: bold;
    color: rgba(80, 59, 38, 0.6);
    cursor: pointer;
    position: absolute;
    top: 0;
    right: 5px;
}

.xpp_modal > .header > #modal_close:hover {
    color: var(--darker-color);
}

.xpp_modal > .content {
    overflow: auto;
}

.xpp_modal > .content > * {
    margin-bottom: 1rem;
}

.xpp_modal > .content > .file {
    width: 60%;
    display: flex;
    flex-direction: row;
    background: #fff;
    margin: 0 auto 1rem auto;
    padding: 5px;
    border-radius: 2px;
}

.xpp_modal > .content > .file > .size {
    color: rgba(0, 0, 0, 0.5);
    margin-left: auto;
}

.xpp_modal > .content > .error > p {
    margin-bottom: 0.5rem;
}

.xpp_modal > .content > .error > code {
    display: flex;
    white-space: pre-line;
}

.xpp_modal > .footer {
    display: flex;
    flex-direction: column;
}

.xpp_modal > .header > hr,
.xpp_modal > .footer > hr {
    margin: 0;
    border-top-color: var(--bottom-color);
    margin-bottom: 1.25rem;
}

.xpp_modal > .footer > button {
    width: 20%;
    margin-bottom: 0;
    align-self: end;
}

.xpp_modal[data-type="download"] > .footer > button {
    width: 30%;
}

